--- a/CustomCpl/CustomCpl.vcxproj.filters
+++ b/CustomCpl/CustomCpl.vcxproj.filters
@@ -39,6 +39,15 @@
     <ClInclude Include="undoc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hostfxr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nethost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="coreclr_delegates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
